--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -1,20 +1,20 @@
-name: CI using maven and Jenkins 
-on: 
- push:  # run the workflow on every commit
- workflow_dispatch: # run the workflow maually
+name: Run SCA scan with Snyk
+on: push
 jobs:
-  buildJob:
+  Snykscan:
     runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout code on the ubuntu server
-        uses: actions/checkout@v4
-      - name: Install Java and Maven on the ubuntu server 
-        uses: actions/setup-java@v4 
-        with:
-         distribution: 'temurin'
-         java-version: '11'
-         cache: 'maven'
-      - name: Test the code 
-        run: mvn test
-      - name: Build the code 
-        run: mvn package
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'adopt'
+        cache: maven
+    - name: Build the code 
+      run: mvn package
+    - name: Run Snyk scan 
+      uses: snyk/actions/maven@master
+      continue-on-error: true
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
