--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Connect to LAB and run curl command to trigger a Job
         uses: cross-the-world/ssh-scp-ssh-pipelines@latest
         with:
-          host: 3.110.195.237
-          user: labuser
-          pass: Nuvelabs123$
+          host: '3.110.195.237'
+          user: 'labuser'
+          pass: 'Nuvelabs123$'
           port: 22
           connect_timeout: 10s
           first_ssh: >
