--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,42 @@
----
-name: CI using maven and Jenkins
+name: CICD using Maven and tomcat
 on:
- # push: null
- workflow_dispatch
+# push:  # run when there is commit to repo
+ workflow_dispatch:  # run manually
 jobs:
-  buildJob:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code on the ubuntu server
-        uses: actions/checkout@v4
-      - name: Install Java and Maven on the ubuntu server
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: "11"
-          cache: maven
-      - name: Test the code
-        run: mvn test
-      - name: Build the code
-        run: mvn package
-      - name: Get the artifact and upload on github repo
-        uses: actions/upload-artifact@v4
-        with:
-          name: java-example-artifact
-          path: /home/runner/work/MavenBuild-SL/MavenBuild-SL/target/java-example.war
-      - name: Connect to LAB and run curl command to trigger a Job
-        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
-        with:
-          host: '3.110.195.237'
-          user: 'labuser'
-          pass: 'Nuvelabs123$'
-          port: 22
-          connect_timeout: 10s
-          first_ssh: >
-            sudo curl -l -u admin:Root123$
-            http://localhost:8080/job/build-Job/build?token=token1
-          scp: |
-            './target/*.war' => /tmp
-          last_ssh: ls -al /tmp
+ CICDjob:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Clone the repo on ubuntu server
+      uses: actions/checkout@v4
+    - name: Install Java and maven on ubuntu server
+      uses: actions/setup-java@v4
+      with:
+       distribution: 'temurin'
+       java-version: '11'
+       cache: 'maven'
+    - name: Build the code 
+      run: mvn package
+    - name: connect to LAb and deploy code on tomcat9
+      uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+      with:
+       host: '3.110.195.237'
+       user: 'labuser'
+       pass: 'Nuvelabs123$'
+       port: 22
+       connect_timeout: 10s
+       first_ssh: |
+          sudo chmod 777 /var/lib/tomcat9/webapps
+       scp: |
+          './target/*war' => /var/lib/tomcat9/webapps
+       last_ssh: |
+          sudo systemctl restart tomcat9
+    - name: Connect to Lab machine and trigger a Jenkins job 
+      uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+      with:
+        host: '43.205.118.149'
+        user: 'labuser'
+        pass: 'Nuvelabs123$'
+        port: 22
+        connect_timeout: 10s
+        first_ssh: |
+          curl -l -u admin:Root123$ http://localhost:8080/job/GithubActions_Job/build?token=token1
