--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,10 @@ jobs:
           './target/*war' => /var/lib/tomcat9/webapps
        last_ssh: |
           sudo systemctl restart tomcat9
-    - name: Connect to Lab machine and trigger a Jenkins job 
-      uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+    - name: Invoke Jenkins Deployment Job 
+      uses: appleboy/jenkins-action@master
       with:
-        host: '3.110.195.237'
-        user: 'labuser'
-        pass: 'Nuvelabs123$'
-        port: 22
-        connect_timeout: 10s
-        first_ssh: |
-          sudo curl -l -u admin:Root123$ http://localhost:8080/job/GithubActions_Job/build?token=token1
+        url: "http://3.110.195.237:8080"
+        user: "admin"
+        token: token1
+        job: "TomcatDeployment"
