--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
       with:
         url: "http://3.110.195.237:8080"
         user: "admin"
-        token: token1
+        token: ${{ secrets.JENKINS_TOKEN }}
         job: "TomcatDeployment"
